--- a/Components/AboutUs/OurMission.module.css
+++ b/Components/AboutUs/OurMission.module.css
@@ -1,14 +1,12 @@
 .ourMission{
-    padding: 0rem 6.2rem;
+    padding: 0rem 4.7rem;
     padding-top: 8rem;
 }
 
-.globeImage{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8rem 8rem;
-    background-color:#023E8A;
+.globeImage img{
+    width:100%;
+    height:100%;
+    
 }
 
 
