--- a/Components/Transfi-Token/WhatIsTransfi.module.css
+++ b/Components/Transfi-Token/WhatIsTransfi.module.css
@@ -7,7 +7,15 @@
 }
 
 .transfidefinition{
-    padding: 0px 3.6rem;
+    padding: 0px 4rem;
+}
+
+.transfidefinition p{
+    padding-right: 8rem;
+}
+
+.buttons{
+   padding-right: 4rem; 
 }
 
 @media(max-width:765px){
