--- a/Components/Home page/Team.module.css
+++ b/Components/Home page/Team.module.css
@@ -50,7 +50,10 @@
     width:100%;
 }
 
-
+.btn{
+    text-align: center;
+    margin-top: 4rem;
+}
 
 @media(max-width:765px){
     .teammembers>div{
