--- a/Components/Navigation.module.css
+++ b/Components/Navigation.module.css
@@ -43,6 +43,7 @@
     align-items: center;
     justify-content: space-between;
     position:fixed;
+    z-index:1;
     background-color: #ffffff;
 }
 
@@ -71,7 +72,8 @@
     margin-top: 3rem;
     margin-bottom: 5rem;
     min-height: 100vh; 
-    position: fixed;  
+    position: fixed;
+    z-index:1;  
     top:-48px;
     background-color: #ffffff; 
     width:100%;
