--- a/styles/globals.css
+++ b/styles/globals.css
@@ -99,6 +99,8 @@ section .image{
 
 .footer-wrapper>img{
   margin-top: -8.5rem;
+  width:40%;
+
 }
 
 .footer .socials{
@@ -157,6 +159,10 @@ h4{
   border:2px solid #00ADE6;
 }
 
+.transparentBtn img{
+  width:30px;
+}
+
 .border{
   border:1px solid red;
 }
@@ -189,5 +195,11 @@ h4{
 
     .row{
       --bs-gutter-x: 0rem !important;
+    }
+
+    .footer-wrapper>img{
+      margin-top: -8.5rem;
+      width:130%;
+    
     }
 }
