--- a/styles/dashboard-layout.scss
+++ b/styles/dashboard-layout.scss
@@ -125,6 +125,7 @@
                 .nav-bottom{
                     position:absolute;
                     bottom: 0px;
+                    width:100%;
                 }
             }
         }
@@ -243,6 +244,7 @@
                     font-weight: 600;
                     line-height: 28px;
                     color:#1F2937;
+                    cursor:pointer;
                 }
 
                 .sub-title{
