--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family:"DM Sans" -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family:'Inter', sans-serif, "DM Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     overflow-x: hidden !important; 
 }
@@ -19,9 +19,26 @@ a {
   box-sizing: border-box;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
 }
+
+::-webkit-scrollbar {
+  width:1em;
+  left:2rem;
+}
+
+::-webkit-scrollbar-track{
+  background: #F3F4F6;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #0F172A;
+  border-radius: 100px;
+}
+
+
 
 .btn-default{
   padding:12px 16px;
@@ -59,6 +76,19 @@ a {
 }
 
 .btn-delete:focus{
+  outline:none;
+}
+
+.btn-update{
+  padding:12px 16px;
+  background:  #E2E8F0;;
+  border-radius: 4px;
+  color: #64748B;
+  border: none;
+  cursor:pointer
+}
+
+.btn-update:focus{
   outline:none;
 }
 
@@ -124,6 +154,20 @@ a {
   align-items:center;
 }
 
+.centralize-10{
+  display:flex;
+  justify-content:center;
+  align-items:flex-end;
+  gap:10px;
+}
+
+.centralize-top-10{
+  display:flex;
+  justify-content:center;
+  align-items:flex-start;
+  gap:10px
+}
+
 .space-between{
   display:flex;
   justify-content:space-between;
@@ -167,7 +211,11 @@ a {
 }
 
 .bckg4{
-  background-color:#F8FAFC
+  background-color:#F8FAFC;
+}
+
+.bckg-white{
+  background-color:#F8FAFC;
 }
 
 .text-color-1{
@@ -176,6 +224,23 @@ a {
 
 .text-color-2{
   color:#00ADE6;
+}
+
+.text-color-3{
+  color:#334155;
+  
+}
+
+.text-color-4{
+  color:#15C6FF;
+}
+
+.text-color-5{
+  color:#0F172A;
+}
+
+.text-is-white{
+  color:#fff;
 }
 
 .success-color{
@@ -212,7 +277,62 @@ input:focus{
   border:1px solid red;
 }
 
+.border-bottom{
+  border-bottom:1px solid #E2E8F0;
+}
 
+.cp{
+  cursor:pointer;
+}
+
+.fade-in{
+  animation: fade-in 300ms ease-out forwards;
+}
+
+.slide-out{
+  animation: slide-out 300ms ease-out forwards;
+}
+
+.slide-in{
+  animation: slide-in 300ms ease-out forwards;
+}
+
+@keyframes slide-out {
+  from {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-5rem);
+  }
+}
+
+
+
+@keyframes slide-in {
+  from {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(5rem);
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0rem);
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 
 
 @media (max-width:765px){
