--- a/styles/dashboard-auth.scss
+++ b/styles/dashboard-auth.scss
@@ -1,24 +1,11 @@
 .dashboard-auth{
     font-family:'Inter', sans-serif;
+
+
     .auth-slider{
         background-color: #E2E8F0;
     }
-    h1{
-        font-weight:600;
-        font-size:24px;
-        color:#023E8A;
-        line-height: 1.5;
-        padding:0 5rem;
-        margin-top: 1.8rem;;
-      }
-      p{
-        color:#64748B;
-        font-size:16px;
-        font-weight:400;
-        line-height: 1.5;
-        padding:0 5rem;
-        margin-top: 0.8rem;
-      }
+
     .row{
         height:100vh
     }
@@ -157,26 +144,6 @@
         input:focus{
             outline:none;
         }
-
-        button{
-            margin-top: 4rem;
-            background-color: #023E8A;
-            border: none;
-            padding: 12px 16px;
-            border: 1px solid #0F172A;
-            border-radius: 4px;
-            color:#fff;
-            width:80%;
-            cursor:pointer;
-        }
-
-        button + p{
-            font-size:16px;
-            span{
-                color: #00ADE6;
-                cursor:pointer;
-            }
-        }
     }
 
     .verification-link{
@@ -192,6 +159,8 @@
             width:100%;
         }
     }
+
+    
 }
 
 
@@ -210,9 +179,8 @@
   .modal-overlay {
     position: fixed;
     top: 8vh;
-    left: 25%;
-    width:50%;
-    right: 25%;
+    left: 30%;
+    width:40%;
     height: auto;
     background-color: white;
     padding: 1rem;
@@ -222,6 +190,10 @@
     animation: slide-down 300ms ease-out forwards;
     max-height:80vh;
     overflow-y: scroll;
+
+    &::-webkit-scrollbar{
+        display:none
+    }
 
     .finalStep{
         padding: 2rem;
