implemented mobile view for authentication

--- a/styles/dashboard-auth.scss
+++ b/styles/dashboard-auth.scss
@@ -6,6 +6,25 @@
         background-color: #E2E8F0;
     }
 
+    .auth-form{
+        .authLogo{
+
+            img{
+                width:30%;
+                margin-bottom:20px;
+            }
+        }
+        @media (max-width:768px){
+            display:flex;
+            justify-content: center;
+            flex-direction: column;
+            background-color:#F8FAFC;
+            height: 100vh;
+            border:1px solid black;
+            padding: 0px 15px;
+        }
+    }
+
     .row{
         height:100vh
     }
@@ -45,9 +64,19 @@
     .signup, .login, .kyc{
         padding: 70px;
         text-align: center;
-        
+        background-color: #fff;
+        /*
         transition: all 5s ease;
         transition-delay: 1s;
+        */
+
+
+        @media (max-width:768px){
+            padding:50px 0px;
+            width:100%;
+            box-shadow: 0px 0px 34px 2px rgba(30, 41, 59, 0.09);
+            border-radius: 8px;
+        }
 
         .border{
             border:1px solid red;
