Added business logic

--- a/Components/dashboard/Swap/Swap.module.scss
+++ b/Components/dashboard/Swap/Swap.module.scss
@@ -5,6 +5,12 @@
         border-bottom:1px solid #E2E8F0;
     }
 
+    .input{
+        border: 1px solid #CBD5E1;
+        border-radius: 4px;
+        padding: 8px 12px 8px 10px;
+    }
+
     .swap-token{
         margin-top: 1rem;
         padding:2.5rem 7rem;
